backend/server/service-internal.yaml
apiVersion: v1
kind: Service
metadata:
  name: webhook-server-internal
  annotations:
    # This annotation links the service to the BackendConfig
    cloud.google.com/backend-config: '{"default": "webhook-server-backendconfig"}'
spec:
  selector:
    app: webhook-server
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP   # default, for internal-only communication
